java: remove unsupported default options (openjdk-11)